[tool.poetry]
name = "sslcommerz-payment-gateway-python"
version = "0.0.1"
description = "Forked from Official repo but upgraded for dependency issues"
authors = ["nobinkhan <nazrulkhan.dk@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
